--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,7 @@ services:
     volumes:
       - ./app:/app
     command: >
-      sh -c "python manage.py wait_for_db && 
-             python manage.py migrate &&
+      sh -c "python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     environment:
       - DB_HOST=db
@@ -20,19 +19,3 @@ services:
       - DB_USER=devuser
       - DB_PASS=devpass123
       - DEBUG=1
-#    depends_on:
-#      - db
-#    links:
-#      - db:db
-#
-#  db:
-#    image: postgres:15-alpine
-#    volumes:
-#      - dev-db-data:/var/lib/postgresql/data
-#    environment:
-#      - POSTGRES_DB=devdb
-#      - POSTGRES_USER=devuser
-#      - POSTGRES_PASSWORD=devpass123
-#
-#volumes:
-#  dev-db-data:
