--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,5 @@ typing-extensions==4.7.1; python_version < '3.11'
 djangorestframework-simplejwt>=5.2.2,<5.3
 drf-spectacular>=0.26.4,<0.27
 django-cors-headers>=4.2.0,<4.3
+psycopg2>=2.9.7,<2.10
+uwsgi>=2.0.22,<2.0.30
