--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -1,23 +1,38 @@
 version: "3.10"
 
 services:
-  app:
-    build:
-      context: .
-    restart: always
-    environment:
-      - DB_HOST=${DB_HOST}
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASS=${DB_PASS}
-      - SECRET_KEY=${SECRET_KEY}
-      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
+    app:
+        build:
+            context: .
+        restart: always
+        environment:
+            - DB_HOST=db
+            - DB_NAME=${DB_NAME}
+            - DB_USER=${DB_USER}
+            - DB_PASS=${DB_PASS}
+            - SECRET_KEY=${SECRET_KEY}
+            - ALLOWED_HOSTS=${ALLOWED_HOSTS}
+        depends_on:
+            - db
 
-  proxy:
-    build:
-      context: ./proxy
-    restart: always
-    depends_on:
-      - app
-    ports:
-      - "8000:8000"
+    db:
+        image: postgres:15-alpine
+        restart: always
+        volumes:
+            - postgres-data:/var/lib/postgresql/data
+        environment:
+            - POSTGRES_DB=${DB_NAME}
+            - POSTGRES_USER=${DB_USER}
+            - POSTGRES_PASSWORD=${DB_PASS}
+
+    proxy:
+        build:
+            context: ./proxy
+        restart: always
+        depends_on:
+            - app
+        ports:
+            - "8000:8000"
+
+volumes:
+    postgres-data:
