--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -8,12 +8,12 @@ jobs:
     name: Test and Lint
     runs-on: ubuntu-20.04
     steps:
-#      -
-#        name: Login to Docker Hub
-#        uses: docker/login-action@v2
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USER }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Checkout
         uses: actions/checkout@v3
